# python_testing

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
benchmarks/: bm_as_series.py  bm_attrs.py  bm_bool_hash.py  bm_copy.py  bm_dataclasses.py  bm_decimal.py  bm_dict.py  bm_freelist.py  bm_freelist_int.py  bm_freelist_list.py  bm_ftscaling_contains.py  bm_gc_collect.py  bm_iter.py  bm_itertools.py  bm_itertools_chain.py  bm_itertools_cycle.py  bm_long.py  bm_long_bitwise.py  bm_long_hash.py  bm_long_lshift_rshift.py  bm_methodcaller.py  bm_np.py  bm_np_linalg.py  bm_np_result_type.py  bm_numpy_cos.py  bm_numpy_cos_quick.py  bm_range.py  bm_singledispatchmethod.py  bm_specializations.py  bm_startswith.py  bm_strip_lstrip_rstrip.py  bm_textwrap.py  pystone.py
scripts/: astype.py  cpython_statistics.py  list_module_level_containers.py  np_auto_histogram.py  pep723.py  script_benchmark_itertools_interleaved.py  test_np_det_performance.py  test_numpy_free_threading.py  vg.py
tmp/: np_quantile.py
