[project]
name = "python_testing"
version = "0.1"
requires-python = ">= 3.11"

[build-system]
# Minimum requirements for the build system to execute.
requires = ["numpy", "setuptools", "wheel", "swig"]  # PEP 508 specifications.

[tool.autopep8]
max_line_length = 120
# ignore = ["E501", "W6"]

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[pycodestyle]
max_line_length = 120


[tool.ruff]
lint.select = ["E", "F", "UP", "I"]
lint.ignore = [ #"UP031", # use format specifiers instead of percent format
            #"F401", # imported but unused
        ]
line-length = 120

target-version = "py311"

[tool.mypy]
ignore_missing_imports = true
exclude = []
